test_regress/t/t_randomize_method_types_unsup.out
%Warning-CONSTRAINTIGN: t/t_randomize_method_types_unsup.v:23:15: Unsupported: randomizing this expression, treating as state
   23 |     dynarr[1].size < 10;
      |               ^~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_randomize_method_types_unsup.v:15:12: Unsupported: random member variable with the type of the containing class
                                                            : ... note: In instance 't'
   15 |   rand Cls cls;
      |            ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Warning-CONSTRAINTIGN: t/t_randomize_method_types_unsup.v:39:41: Unsupported: randomizing this expression, treating as state
   39 |     res = obj.randomize() with { dynarr.size > 2; };
      |                                         ^~~~
%Error: Exiting due to
